tests/files/type_checker_tests/should_fail/025.cmdr
//Should fail on exponentiate set when left side is not a variable
5 **= 3;